# FastKnapsack

./: CMakeLists.txt  README.md  benchmark.py  debug_kernel_knapsack  debug_kernel_to_file  debug_kernel_to_file.cpp  dp_structs.h  hitting_set.cpp  kernel_debug.txt  knapsack.cpp  knapsack_benchmark.py  knapsack_solver  knapsack_traditional  main.cpp  main_algorithms.cpp  peeling.h  traditional_knapsack.cpp
Prototypes/: kWiseEindependent.py  witness.py
adaptive_benchmark/: adaptive_min_witness_bench  adaptive_min_witness_solver.cpp  benchmark_adaptive_witness.py
coinchange_benchmark/: coinchange_simplified_solver  coinchange_simplified_solver.cpp  coinchange_traditional  coinchange_traditional.cpp  simplified_coinchange_benchmark.py  simplified_coinchange_ops  simplified_coinchange_ops.cpp  simplified_coinchange_ops_benchmark.py
debug/: compiler tags  debug.py  my_debug  my_debug.cpp  testcase  testcase.txt
include/: algorithms.h  constants.h  convolution.h  dp_structs.h  hitting_set.h  peeling.h  witness.h
knapsack_benchmark/: knapsack.cpp  knapsack_benchmark.py  knapsack_solver  knapsack_traditional  traditional_knapsack.cpp
peeling_benchmark/: benchmark_knapsack_witness.py  knapsack_k_witness_bench  knapsack_k_witness_solver.cpp
src/: algorithms.cpp  convolution.cpp  debug_kernel_to_file.cpp  dp_structs.cpp  hitting_set.cpp  peeling.cpp  witness.cpp
witness_benchmark/: k_witness_bench  min_witness_benchmark.py  naive_min_witness_test  naive_min_witness_test.cpp  naive_witness_test  naive_witness_test.cpp  optimized_min_witness_test  random_kWit_bench  (+12 more)
(+3 files in other folders)
